# KYC-AML-Agentic-Pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py  config.py  pipeline.py
src/kyc_agent_factory/: __init__.py  app.py  audit.py  config.py  ingestion.py  orchestrator.py  rag.py  resolution.py  risk.py  screening.py  storage.py  storage_sqlalchemy.py
src/kyc_agent_factory/data/: adverse_media_sample.jsonl  sdn_sample.csv
tests/: test_smoke.py
