[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyc-agent-factory"
version = "0.1.0"
description = "KYC/AML Agentic Pipeline with auditability and risk controls"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name="Amir Samiezadeh", email="samiezadehamir@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kyc_agent_factory*"]
